[package]
name = "esp-radio-hil-runner"
version = "0.1.0"
edition = "2024"

# [dependencies]
# clap = { version = "4", features = ["derive"] }
# # probe-rs = "0.31"
# probe-rs = { version = "0.31.0", features = ["builtin-targets"] }
# serialport = "4"
# anyhow = "1"
# pretty_env_logger = "0.5"
# log = "0.4"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
serialport = "4.3"

[[bin]]
name = "esp-radio-hil-runner"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
strip = true
